--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content=""/>
+    <meta name="description" content="Stickman Hook is a popular mobile and web-based physics-based online game that you can download on PC and play online and offline for free and the objective is to rotate and launch the stickman from one point to another."/>
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Smash Karts Game" />
-    <meta property="og:description" content="" />
+    <meta property="og:title" content="stickman hook" />
+    <meta property="og:description" content="Stickman Hook is a popular mobile and web-based physics-based online game that you can download on PC and play online and offline for free and the objective is to rotate and launch the stickman from one point to another." />
     <meta property="og:url" content="" />
     <meta property="og:site_name" content="" />
     <meta name="robots" content="index, follow, max-snippet:-1, max-video-preview:-1, max-image-preview:large"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Smash Karts Game</title>
+    <title>stickman hook</title>
     <style>
         *{
             margin: 0px;
@@ -86,7 +86,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Smash Karts Game</h1>
+        <h1>stickman hook</h1>
         <div id="keywords">
             free games online, free games, play free games, play games online
         </div>
@@ -98,12 +98,12 @@
             </div>
             <div class="col-md-10">
                 <div id="iframecontainer">
-                    <iframe src="https://gamesfreetoplay.github.io/smashkarts/" class="iframe"></iframe>
+                    <iframe src="https://gamesfreetoplay.github.io/stickman-hook/" class="iframe"></iframe>
                 </div>
                 <br>
-                <p>Smash Karts is a 3D multiplayer kart battle game. Drive your go-kart, pick up weapons, and blow up other karts to win! Keep playing to level up and unlock new characters and prizes.</p>
+                <p>Stickman Hook is a popular mobile and web-based physics-based online game that you can download on PC and play online and offline for free and the objective is to rotate and launch the stickman from one point to another.</p>
                 <div class="text-center">
-                    <a href="" class="button">Play More Games Online</a>
+                    <a href="https://freegames9.com/" class="button">Play More Games Online</a>
                 </div>
             </div>
             <div class="col-md-1">
