--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Stickman Hook is a popular mobile and web-based physics-based online game that you can download on PC and play online and offline for free and the objective is to rotate and launch the stickman from one point to another."/>
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="stickman hook" />
+    <meta property="og:title" content="Stickman Hook" />
     <meta property="og:description" content="Stickman Hook is a popular mobile and web-based physics-based online game that you can download on PC and play online and offline for free and the objective is to rotate and launch the stickman from one point to another." />
     <meta property="og:url" content="" />
     <meta property="og:site_name" content="" />
     <meta name="robots" content="index, follow, max-snippet:-1, max-video-preview:-1, max-image-preview:large"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>stickman hook</title>
+    <title>Stickman Hook</title>
     <style>
         *{
             margin: 0px;
@@ -86,7 +86,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>stickman hook</h1>
+        <h1>Stickman Hook</h1>
         <div id="keywords">
             free games online, free games, play free games, play games online
         </div>
